# Register

./: db.sqlite3  pyproject.toml  requirements
account/: admin.py  serializers.py  urls.py
account/migrations/: 0001_initial.py
account/static/: static.css
account/views/: api_views.py
config/: settings.py  urls.py
templates/: base.html
